# either

./: README.md  pyproject.toml
either/: __init__.py  either.py
tests/: test_either.py
